@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-28T16:19:29Z",
+  "timestamp" : "2023-08-29T01:07:23Z",
   "count_outdated" : 787,
   "uniques_outdated" : 455,
-  "count" : 816,
-  "uniques" : 478,
+  "count" : 817,
+  "uniques" : 479,
   "clones" : [
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-08-16T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2023-08-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
