@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-08-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-08-16T00:00:00Z",
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2023-08-27T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
